Uploaded image for project: 'Qt'
  1. Qt
  2. QTBUG-81462

Start Crash on installation after windeployqt

    XMLWordPrintable

Details

    • Bug
    • Resolution: Done
    • P1: Critical
    • 5.14.2, 5.15.0 Beta3
    • 5.14.0
    • WebEngine
    • None
    • Windows
    • 2f52afda8e77429c00029f94e887ed37dfb4e584 (qt/qtbase/5.14.2)

    Description

      I deploy my app with qt in a directory which contain chinese characters, the app crash on start.

      When I move it to a english directory, it works.

       

      The following text is stack:

      005bedc4 10feeafb Qt5WebEngineCore!base::i18n::InitializeICU+0x1db
      005bf044 10ae39c7 Qt5WebEngineCore!content::ContentMainRunnerImpl::Initialize+0x1ec
      005bf0c8 0f8bdefb Qt5WebEngineCore!QtWebEngineCore::WebEngineContext::WebEngineContext+0x159b
      005bf408 0f8bf368 Qt5WebEngineCore!QtWebEngineCore::WebEngineContext::current+0x28
      005bf410 0f8941a5 Qt5WebEngineCore!QtWebEngineCore::ProfileAdapter::globalQObjectRoot+0x5
      005bf414 786ae06c Qt5WebEngineWidgets!QWebEngineProfile::defaultProfile+0x7c

       

      OS: Windows 10 home 10.0.18362

      Attachments

        Issue Links

          No reviews matched the request. Check your Options in the drop-down menu of this sections header.

          Activity

            People

              kiburtse Kirill Burtsev
              laf163 LIU Aifu
              Votes:
              0 Vote for this issue
              Watchers:
              3 Start watching this issue

              Dates

                Created:
                Updated:
                Resolved:

                Gerrit Reviews

                  There are no open Gerrit changes